--- a/src/components/board/Board.module.scss
+++ b/src/components/board/Board.module.scss
@@ -38,7 +38,7 @@
     border-radius: 12px; 
     height: 100vh; 
     overflow: hidden; 
-    border: 5px solid red;
+    // border: 5px solid red;
 }
 
 .listsRow {
