--- a/src/components/column/Column.module.scss
+++ b/src/components/column/Column.module.scss
@@ -22,6 +22,29 @@
     font-weight: 600;
 }
 
+.titleSection {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    flex: 1;
+}
+
+.dragHandle {
+    color: #9ca3af;
+    cursor: grab;
+    opacity: 0.6;
+    transition: opacity 0.2s ease-in-out;
+    
+    &:hover {
+        opacity: 1;
+        color: #6b7280;
+    }
+}
+
+.column:hover .dragHandle {
+    opacity: 0.8;
+}
+
 .tasks {
     display: flex;
     flex-direction: column;
